# Bayesian_RCT_research

./: .gitignore  IMPROVEMENTS.md  README.md  RESEARCH_VALIDATION.md  main.py  pyproject.toml  requirements.txt
examples/: gpt4_rye_analysis.py  posterior_predictive_demo.py  quick_demo.py  quick_real_analysis.py
scripts/: check_setup.py
src/: __init__.py  adaptive_prior_selector.py  analysis.py  data_loader.py  data_models.py  llm_elicitor.py  output_handler.py  posterior_predictive_evaluation.py
